--- a/gui/src/main/resources/io/github/manami/gui/controller/check_list_tab.fxml
+++ b/gui/src/main/resources/io/github/manami/gui/controller/check_list_tab.fxml
@@ -9,9 +9,9 @@
 
 <AnchorPane id="AnchorPane" fx:id="anchor" maxHeight="-1.0" maxWidth="-1.0" minHeight="-1.0" minWidth="-1.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.manami.gui.controller.CheckListController">
    <children>
-       <ScrollPane id="scrollPane" fx:id="scrollPaneList" prefHeight="0.0" prefWidth="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+       <ScrollPane id="scrollPane" fx:id="scrollPaneList" fitToWidth="true" prefHeight="0.0" prefWidth="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
            <padding>
-               <Insets left="10.0" />
+               <Insets left="10.0" right="10.0" />
            </padding>
           <content>
               <BorderPane prefHeight="-1.0" prefWidth="-1.0">
@@ -80,9 +80,11 @@
                   <bottom>
                       <GridPane fx:id="gridPane" BorderPane.alignment="CENTER">
                           <columnConstraints>
-                              <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-                              <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-                              <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+                              <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="40.0" minWidth="10.0" prefWidth="40.0" />
+                              <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" minWidth="10.0" />
+                              <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" minWidth="10.0" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" maxWidth="40.0" minWidth="10.0" prefWidth="40.0" />
+                        <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="40.0" minWidth="10.0" prefWidth="40.0" />
                               <ColumnConstraints hgrow="ALWAYS" />
                           </columnConstraints>
                           <rowConstraints>
