--- a/gui/src/main/resources/io/github/manami/gui/controller/filter_list_tab.fxml
+++ b/gui/src/main/resources/io/github/manami/gui/controller/filter_list_tab.fxml
@@ -1,110 +1,119 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<AnchorPane id="AnchorPane" maxHeight="-1.0" maxWidth="-1.0" minHeight="-1.0" minWidth="-1.0"
-            xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="io.github.manami.gui.controller.FilterListController">
-    <ScrollPane id="scrollPane" fx:id="scrollPaneList" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0"
-                AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <padding>
-            <Insets left="10.0"/>
-        </padding>
-        <BorderPane prefHeight="-1.0" prefWidth="-1.0">
-            <top>
-                <Label text="Filter List">
-                    <font>
-                        <Font name="System Bold" size="16.0"/>
-                    </font>
-                    <BorderPane.margin>
-                        <Insets bottom="25.0" right="10.0" top="10.0"/>
-                    </BorderPane.margin>
-                </Label>
-            </top>
-            <center>
-                <VBox spacing="30.0">
-                    <BorderPane.margin>
-                        <Insets/>
-                    </BorderPane.margin>
-                    <Label text="This list contains all animes that you don't want to appear in the related animes list or in recommendations."/>
-                    <HBox>
-                        <opaqueInsets>
-                            <Insets/>
-                        </opaqueInsets>
-                        <VBox.margin>
-                            <Insets top="10.0"/>
-                        </VBox.margin>
-                        <Label text="Add new URL:">
-                            <HBox.margin>
-                                <Insets right="10.0" top="3.0"/>
-                            </HBox.margin>
-                            <font>
-                                <Font name="System Bold" size="11.0"/>
-                            </font>
-                        </Label>
-                        <TextField fx:id="txtUrl" prefHeight="22.0" prefWidth="277.0">
-                            <HBox.margin>
-                                <Insets right="10.0"/>
-                            </HBox.margin>
-                        </TextField>
-                        <Button defaultButton="true" mnemonicParsing="false" onAction="#addEntry"
-                                text="add">
-                            <HBox.margin>
-                                <Insets right="10.0"/>
-                            </HBox.margin>
-                        </Button>
-                        <ProgressIndicator fx:id="progressIndicator" prefHeight="15.0" prefWidth="22.0"
-                                           visible="false">
-                            <HBox.margin>
-                                <Insets left="20.0"/>
-                            </HBox.margin>
-                        </ProgressIndicator>
-                        <Label fx:id="lblProgressMsg" text="Label" visible="false">
-                            <HBox.margin>
-                                <Insets left="10.0" top="4.0"/>
-                            </HBox.margin>
-                            <font>
-                                <Font name="System Bold" size="11.0"/>
-                            </font>
-                        </Label>
-                    </HBox>
-                </VBox>
-            </center>
-            <bottom>
-                <Accordion BorderPane.alignment="CENTER">
-                    <panes>
-                        <TitledPane fx:id="recomListPane" expanded="false" text="Recommended Filter List">
-                            <GridPane fx:id="recomGridPane">
-                                <columnConstraints>
-                                    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
-                                    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
-                                    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
-                                </columnConstraints>
-                                <rowConstraints>
-                                    <RowConstraints minHeight="10.0" vgrow="ALWAYS"/>
-                                </rowConstraints>
-                            </GridPane>
-                        </TitledPane>
-                        <TitledPane fx:id="filterListPane" text="Filter List">
-                            <BorderPane>
-                                <center>
-                                    <Pagination fx:id="pagination" maxPageIndicatorCount="20" pageCount="0"
-                                                BorderPane.alignment="CENTER">
-                                        <BorderPane.margin>
-                                            <Insets/>
-                                        </BorderPane.margin>
-                                    </Pagination>
-                                </center>
-                            </BorderPane>
-                        </TitledPane>
-                    </panes>
-                    <BorderPane.margin>
-                        <Insets bottom="150.0" top="50.0"/>
-                    </BorderPane.margin>
-                </Accordion>
-            </bottom>
-        </BorderPane>
-    </ScrollPane>
+
+<AnchorPane id="AnchorPane" maxHeight="-1.0" maxWidth="-1.0" minHeight="-1.0" minWidth="-1.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.manami.gui.controller.FilterListController">
+   <children>
+       <ScrollPane id="scrollPane" fx:id="scrollPaneList" fitToWidth="true" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+           <padding>
+               <Insets left="10.0" right="10.0" />
+           </padding>
+          <content>
+              <BorderPane prefHeight="-1.0" prefWidth="-1.0">
+                  <top>
+                      <Label text="Filter List">
+                          <font>
+                              <Font name="System Bold" size="16.0" />
+                          </font>
+                          <BorderPane.margin>
+                              <Insets bottom="25.0" right="10.0" top="10.0" />
+                          </BorderPane.margin>
+                      </Label>
+                  </top>
+                  <center>
+                      <VBox spacing="30.0">
+                          <BorderPane.margin>
+                              <Insets />
+                          </BorderPane.margin>
+                         <children>
+                             <Label text="This list contains all animes that you don't want to appear in the related animes list or in recommendations." />
+                             <HBox>
+                                 <opaqueInsets>
+                                     <Insets />
+                                 </opaqueInsets>
+                                 <VBox.margin>
+                                     <Insets top="10.0" />
+                                 </VBox.margin>
+                                <children>
+                                    <Label text="Add new URL:">
+                                        <HBox.margin>
+                                            <Insets right="10.0" top="3.0" />
+                                        </HBox.margin>
+                                        <font>
+                                            <Font name="System Bold" size="11.0" />
+                                        </font>
+                                    </Label>
+                                    <TextField fx:id="txtUrl" prefHeight="22.0" prefWidth="277.0">
+                                        <HBox.margin>
+                                            <Insets right="10.0" />
+                                        </HBox.margin>
+                                    </TextField>
+                                    <Button defaultButton="true" mnemonicParsing="false" onAction="#addEntry" text="add">
+                                        <HBox.margin>
+                                            <Insets right="10.0" />
+                                        </HBox.margin>
+                                    </Button>
+                                    <ProgressIndicator fx:id="progressIndicator" prefHeight="15.0" prefWidth="22.0" visible="false">
+                                        <HBox.margin>
+                                            <Insets left="20.0" />
+                                        </HBox.margin>
+                                    </ProgressIndicator>
+                                    <Label fx:id="lblProgressMsg" text="Label" visible="false">
+                                        <HBox.margin>
+                                            <Insets left="10.0" top="4.0" />
+                                        </HBox.margin>
+                                        <font>
+                                            <Font name="System Bold" size="11.0" />
+                                        </font>
+                                    </Label>
+                                </children>
+                             </HBox>
+                         </children>
+                      </VBox>
+                  </center>
+                  <bottom>
+                      <Accordion BorderPane.alignment="CENTER">
+                          <panes>
+                              <TitledPane fx:id="recomListPane" expanded="false" text="Recommended Filter List">
+                                 <content>
+                                     <GridPane fx:id="recomGridPane">
+                                         <columnConstraints>
+                                             <ColumnConstraints hgrow="ALWAYS" maxWidth="60.0" minWidth="10.0" prefWidth="60.0" />
+                                             <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+                                             <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+                                         </columnConstraints>
+                                         <rowConstraints>
+                                             <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
+                                         </rowConstraints>
+                                     </GridPane>
+                                 </content>
+                              </TitledPane>
+                              <TitledPane fx:id="filterListPane" text="Filter List">
+                                 <content>
+                                     <BorderPane>
+                                         <center>
+                                             <Pagination fx:id="pagination" maxPageIndicatorCount="20" pageCount="0" BorderPane.alignment="CENTER">
+                                                 <BorderPane.margin>
+                                                     <Insets />
+                                                 </BorderPane.margin>
+                                             </Pagination>
+                                         </center>
+                                     </BorderPane>
+                                 </content>
+                              </TitledPane>
+                          </panes>
+                          <BorderPane.margin>
+                              <Insets bottom="150.0" top="50.0" />
+                          </BorderPane.margin>
+                      </Accordion>
+                  </bottom>
+              </BorderPane>
+          </content>
+       </ScrollPane>
+   </children>
 </AnchorPane>
