--- a/gui/src/main/resources/io/github/manami/gui/controller/search_results_tab.fxml
+++ b/gui/src/main/resources/io/github/manami/gui/controller/search_results_tab.fxml
@@ -9,9 +9,9 @@
 
 <AnchorPane id="AnchorPane" maxHeight="-1.0" maxWidth="-1.0" minHeight="-1.0" minWidth="-1.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.manami.gui.controller.SearchResultsController">
    <children>
-       <ScrollPane id="scrollPane" fx:id="scrollPaneList" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+       <ScrollPane id="scrollPane" fx:id="scrollPaneList" fitToWidth="true" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
            <padding>
-               <Insets left="10.0" />
+               <Insets left="10.0" right="10.0" />
            </padding>
           <content>
               <BorderPane prefHeight="-1.0" prefWidth="-1.0">
@@ -30,9 +30,9 @@
                           <panes>
                         <TitledPane fx:id="animeListTitledPane" layoutX="10.0" layoutY="10.0" text="Search results from: anime list">
                            <content>
-                              <GridPane fx:id="animeListGridPane">
+                              <GridPane fx:id="animeListGridPane" alignment="CENTER_LEFT">
                                  <columnConstraints>
-                                    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+                                    <ColumnConstraints hgrow="ALWAYS" maxWidth="50.0" minWidth="10.0" />
                                     <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
                                  </columnConstraints>
                                  <rowConstraints>
@@ -43,9 +43,9 @@
                         </TitledPane>
                               <TitledPane fx:id="filterListTitledPane" text="Search results from: filter list">
                            <content>
-                              <GridPane fx:id="filterListGridPane">
+                              <GridPane fx:id="filterListGridPane" alignment="CENTER_LEFT">
                                  <columnConstraints>
-                                    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+                                    <ColumnConstraints hgrow="ALWAYS" maxWidth="50.0" minWidth="10.0" />
                                     <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
                                  </columnConstraints>
                                  <rowConstraints>
@@ -56,9 +56,9 @@
                               </TitledPane>
                         <TitledPane fx:id="watchListTitledPane" layoutX="10.0" layoutY="32.0" text="Search results from: watch list">
                            <content>
-                              <GridPane fx:id="watchListGridPane">
+                              <GridPane fx:id="watchListGridPane" alignment="CENTER_LEFT">
                                  <columnConstraints>
-                                    <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+                                    <ColumnConstraints hgrow="ALWAYS" maxWidth="50.0" minWidth="10.0" />
                                     <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
                                  </columnConstraints>
                                  <rowConstraints>
