--- a/gui/src/main/resources/io/github/manami/gui/controller/watch_list_tab.fxml
+++ b/gui/src/main/resources/io/github/manami/gui/controller/watch_list_tab.fxml
@@ -31,7 +31,7 @@
                               <Insets />
                           </BorderPane.margin>
                          <children>
-                             <Label text="This list contains all animes that you are planning to watch or that you are currently watching." />
+                             <Label text="This list contains all anime that you are planning to watch or that you are currently watching." />
                              <HBox>
                                  <opaqueInsets>
                                      <Insets />
