--- a/gui/src/main/resources/io/github/manami/gui/controller/tag_list_tab.fxml
+++ b/gui/src/main/resources/io/github/manami/gui/controller/tag_list_tab.fxml
@@ -71,6 +71,7 @@
                                             <Font name="System Bold" size="11.0" />
                                         </font>
                                     </Label>
+                              <Button fx:id="btnCancel" mnemonicParsing="false" onAction="#cancel" text="cancel" visible="false" />
                                 </children>
                              </HBox>
                          </children>
