--- a/gui/src/main/resources/io/github/manami/gui/controller/tag_list_tab.fxml
+++ b/gui/src/main/resources/io/github/manami/gui/controller/tag_list_tab.fxml
@@ -1,36 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane id="AnchorPane" fx:id="anchor" maxHeight="-1.0" maxWidth="-1.0" minHeight="-1.0" minWidth="-1.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.manami.gui.controller.TagListController">
    <children>
-       <ScrollPane id="scrollPane" fx:id="scrollPaneList" fitToWidth="true" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+       <ScrollPane id="scrollPane" fx:id="scrollPaneList" fitToHeight="true" fitToWidth="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
            <padding>
                <Insets left="10.0" right="10.0" />
            </padding>
-          <content>
-              <BorderPane prefHeight="-1.0" prefWidth="-1.0">
-                  <top>
-                      <Label text="Tags">
-                          <font>
-                              <Font name="System Bold" size="16.0" />
-                          </font>
-                          <BorderPane.margin>
-                              <Insets bottom="25.0" right="10.0" top="10.0" />
-                          </BorderPane.margin>
-                      </Label>
-                  </top>
-                  <center>
+         <content>
+            <VBox spacing="40.0">
+               <children>
                       <VBox spacing="30.0">
-                          <BorderPane.margin>
-                              <Insets />
-                          </BorderPane.margin>
                          <children>
+                            <Label text="Tags">
+                                <font>
+                                    <Font name="System Bold" size="16.0" />
+                                </font>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                            </Label>
                              <Label text="EXPERIMENTAL!: This list contains all anime of a specific tag. You can add the Link of a genre, studio or season from MAL." />
                              <HBox>
                                  <opaqueInsets>
@@ -40,60 +34,89 @@
                                      <Insets top="10.0" />
                                  </VBox.margin>
                                 <children>
-                                    <Label text="Tag URL:">
-                                        <HBox.margin>
-                                            <Insets right="10.0" top="3.0" />
-                                        </HBox.margin>
-                                        <font>
-                                            <Font name="System Bold" size="11.0" />
-                                        </font>
-                                    </Label>
-                                    <TextField fx:id="txtUrl" prefHeight="22.0" prefWidth="277.0">
-                                        <HBox.margin>
-                                            <Insets right="10.0" />
-                                        </HBox.margin>
-                                    </TextField>
-                                    <Button defaultButton="true" mnemonicParsing="false" onAction="#addEntry" text="search">
-                                        <HBox.margin>
-                                            <Insets right="10.0" />
-                                        </HBox.margin>
+                              <HBox spacing="10.0">
+                                 <children>
+                                          <Label text="Tag URL:">
+                                              <HBox.margin>
+                                                  <Insets top="3.0" />
+                                              </HBox.margin>
+                                              <font>
+                                                  <Font name="System Bold" size="11.0" />
+                                              </font>
+                                          </Label>
+                                          <TextField fx:id="txtUrl" prefHeight="22.0" prefWidth="277.0">
+                                              <HBox.margin>
+                                                  <Insets />
+                                              </HBox.margin>
+                                          </TextField>
+                                          <Button defaultButton="true" mnemonicParsing="false" onAction="#search" text="search">
+                                              <HBox.margin>
+                                                  <Insets />
+                                              </HBox.margin>
+                                          </Button>
+                                 </children>
+                              </HBox>
+                              <HBox fx:id="hBoxProgress" spacing="5.0" visible="false">
+                                 <children>
+                                          <ProgressIndicator prefHeight="15.0" prefWidth="22.0">
+                                              <HBox.margin>
+                                                  <Insets />
+                                              </HBox.margin>
+                                          </ProgressIndicator>
+                                          <Label text="loading...">
+                                              <HBox.margin>
+                                                  <Insets top="4.0" />
+                                              </HBox.margin>
+                                              <font>
+                                                  <Font name="System Bold" size="11.0" />
+                                              </font>
+                                          </Label>
+                                    <Button cancelButton="true" mnemonicParsing="false" onAction="#cancel" text="cancel">
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
                                     </Button>
-                                    <ProgressIndicator fx:id="progressIndicator" prefHeight="15.0" prefWidth="22.0" visible="false">
-                                        <HBox.margin>
-                                            <Insets left="20.0" />
-                                        </HBox.margin>
-                                    </ProgressIndicator>
-                                    <Label fx:id="lblProgressMsg" text="loading..." visible="false">
-                                        <HBox.margin>
-                                            <Insets left="10.0" top="4.0" />
-                                        </HBox.margin>
-                                        <font>
-                                            <Font name="System Bold" size="11.0" />
-                                        </font>
-                                    </Label>
-                              <Button fx:id="btnCancel" mnemonicParsing="false" onAction="#cancel" text="cancel" visible="false" />
+                                 </children>
+                                 <HBox.margin>
+                                    <Insets left="30.0" />
+                                 </HBox.margin>
+                              </HBox>
                                 </children>
                              </HBox>
                          </children>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
                       </VBox>
-                  </center>
-                  <bottom>
-                      <GridPane fx:id="gridPane" alignment="CENTER_LEFT" BorderPane.alignment="CENTER_LEFT">
-                          <columnConstraints>
-                              <ColumnConstraints hgrow="ALWAYS" maxWidth="230.0" minWidth="10.0" prefWidth="230.0" />
-                              <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-                              <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                              <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
-                          </rowConstraints>
-                          <BorderPane.margin>
-                              <Insets top="50.0" />
-                          </BorderPane.margin>
-                      </GridPane>
-                  </bottom>
-              </BorderPane>
-          </content>
+                  <GridPane VBox.vgrow="ALWAYS">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <TableView fx:id="contentTable" cache="true" style="-fx-selection-bar: #e1e7f5; -fx-selection-bar-non-focused: #ebebeb;">
+                           <VBox.margin>
+                              <Insets top="40.0" />
+                           </VBox.margin>
+                           <columns>
+                              <TableColumn fx:id="colImage" editable="false" minWidth="225.0" prefWidth="-1.0" sortable="false" text="Image" />
+                              <TableColumn fx:id="colTitle" editable="false" minWidth="400.0" prefWidth="-1.0" style="-fx-alignment: CENTER-LEFT;" text="Title" />
+                              <TableColumn fx:id="colActions" editable="false" minWidth="200.0" prefWidth="-1.0" sortable="false" text="Actions" />
+                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                     </children>
+                  </GridPane>
+               </children>
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+            </VBox>
+         </content>
        </ScrollPane>
    </children>
 </AnchorPane>
