RelatedAnimeController uses AnimeTableBuilder

--- a/gui/src/main/resources/io/github/manami/gui/controller/check_list_tab.fxml
+++ b/gui/src/main/resources/io/github/manami/gui/controller/check_list_tab.fxml
@@ -63,7 +63,7 @@
                                                 </Label>
                                        </children>
                                     </VBox>
-                                          <Button fx:id="btnCancel" cancelButton="true" mnemonicParsing="false" visible="false">
+                                          <Button fx:id="btnCancel" cancelButton="true" mnemonicParsing="false" text="Cancel" visible="false">
                                               <VBox.margin>
                                                   <Insets top="30.0" />
                                               </VBox.margin>
