--- a/gui/src/main/resources/io/github/manami/gui/controller/related_anime_tab.fxml
+++ b/gui/src/main/resources/io/github/manami/gui/controller/related_anime_tab.fxml
@@ -9,43 +9,28 @@
 
 <AnchorPane id="AnchorPane" fx:id="anchor" maxHeight="-1.0" maxWidth="-1.0" minHeight="-1.0" minWidth="-1.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.manami.gui.controller.RelatedAnimeController">
    <children>
-       <ScrollPane id="scrollPane" fx:id="scrollPaneList" fitToWidth="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-           <padding>
-               <Insets left="10.0" right="10.0" />
-           </padding>
-          <content>
-              <BorderPane prefHeight="-1.0" prefWidth="-1.0">
-                  <top>
-                      <Label text="Related Anime">
-                          <font>
-                              <Font name="System Bold" size="16.0" />
-                          </font>
-                          <BorderPane.margin>
-                              <Insets bottom="25.0" right="10.0" top="10.0" />
-                          </BorderPane.margin>
-                      </Label>
-                  </top>
-                  <center>
-                      <VBox>
-                          <BorderPane.margin>
-                              <Insets />
-                          </BorderPane.margin>
+       <ScrollPane id="scrollPane" fx:id="scrollPaneList" fitToHeight="true" fitToWidth="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <content>
+            <VBox spacing="30.0">
+               <children>
+                      <VBox spacing="30.0">
                          <children>
+                            <Label text="Related Anime">
+                                <font>
+                                    <Font name="System Bold" size="16.0" />
+                                </font>
+                            </Label>
                              <Label text="This list contains all anime which are related to those in the anime list. Not being shown are entries from the filter list.">
                                  <VBox.margin>
-                                     <Insets bottom="30.0" />
+                                     <Insets />
                                  </VBox.margin>
                              </Label>
-                             <HBox alignment="CENTER">
+                             <VBox alignment="CENTER">
                                 <children>
-                                    <Button fx:id="btnStart" defaultButton="true" mnemonicParsing="false" text="Start Search" />
-                                </children>
-                             </HBox>
-                             <VBox fx:id="vBoxProgress" alignment="CENTER" visible="false">
-                                <children>
-                              <HBox alignment="TOP_CENTER">
+                                    <Button fx:id="btnStart" defaultButton="true" mnemonicParsing="false" onAction="#start" text="Start Search" />
+                              <HBox fx:id="hBoxProgress" alignment="TOP_CENTER" spacing="5.0" visible="false">
                                  <children>
-                                    <VBox alignment="CENTER">
+                                    <VBox alignment="CENTER" spacing="5.0">
                                        <children>
                                                 <ProgressBar fx:id="progressBar" prefHeight="25.0" prefWidth="220.0" />
                                                 <Label fx:id="lblProgress" text="preparing">
@@ -55,12 +40,12 @@
                                                 </Label>
                                        </children>
                                     </VBox>
-                                          <Button fx:id="btnCancel" alignment="TOP_CENTER" cancelButton="true" contentDisplay="CENTER" mnemonicParsing="false" visible="false">
+                                          <Button alignment="TOP_CENTER" cancelButton="true" contentDisplay="CENTER" mnemonicParsing="false" onAction="#cancel" text="Cancel">
                                               <VBox.margin>
                                                   <Insets top="30.0" />
                                               </VBox.margin>
                                        <HBox.margin>
-                                          <Insets left="10.0" />
+                                          <Insets />
                                        </HBox.margin>
                                           </Button>
                                  </children>
@@ -68,25 +53,34 @@
                                 </children>
                              </VBox>
                          </children>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
                       </VBox>
-                  </center>
-                  <bottom>
-                      <GridPane fx:id="gridPane" BorderPane.alignment="CENTER_LEFT">
-                          <columnConstraints>
-                              <ColumnConstraints hgrow="ALWAYS" maxWidth="230.0" minWidth="10.0" prefWidth="230.0" />
-                              <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-                              <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                              <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
-                          </rowConstraints>
-                          <BorderPane.margin>
-                              <Insets top="40.0" />
-                          </BorderPane.margin>
-                      </GridPane>
-                  </bottom>
-              </BorderPane>
-          </content>
+                  <GridPane VBox.vgrow="ALWAYS">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <TableView fx:id="contentTable">
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                     </children>
+                  </GridPane>
+               </children>
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+            </VBox>
+         </content>
+         <padding>
+            <Insets left="10.0" right="10.0" />
+         </padding>
        </ScrollPane>
    </children>
 </AnchorPane>
